src/gks/bindings/gkscore.rs

extern "C" {
    pub fn gks_wmf_plugin(
        fctid: ::core::ffi::c_int,
        dx: ::core::ffi::c_int,
        dy: ::core::ffi::c_int,
        dimx: ::core::ffi::c_int,
        i_arr: *mut ::core::ffi::c_int,
        len_f_arr_1: ::core::ffi::c_int,
        f_arr_1: *mut f64,
        len_f_arr_2: ::core::ffi::c_int,
        f_arr_2: *mut f64,
        len_c_arr: ::core::ffi::c_int,
        c_arr: *mut ::core::ffi::c_char,
        ptr: *mut *mut ::core::ffi::c_void,
    );
}
extern "C" {
    pub fn gks_quartz_plugin(
        fctid: ::core::ffi::c_int,
        dx: ::core::ffi::c_int,
        dy: ::core::ffi::c_int,
        dimx: ::core::ffi::c_int,
        i_arr: *mut ::core::ffi::c_int,
        len_f_arr_1: ::core::ffi::c_int,
        f_arr_1: *mut f64,
        len_f_arr_2: ::core::ffi::c_int,
        f_arr_2: *mut f64,
        len_c_arr: ::core::ffi::c_int,
        c_arr: *mut ::core::ffi::c_char,
        ptr: *mut *mut ::core::ffi::c_void,
    );
}
extern "C" {
    pub fn gks_gl_plugin(
        fctid: ::core::ffi::c_int,
        dx: ::core::ffi::c_int,
        dy: ::core::ffi::c_int,
        dimx: ::core::ffi::c_int,
        i_arr: *mut ::core::ffi::c_int,
        len_f_arr_1: ::core::ffi::c_int,
        f_arr_1: *mut f64,
        len_f_arr_2: ::core::ffi::c_int,
        f_arr_2: *mut f64,
        len_c_arr: ::core::ffi::c_int,
        c_arr: *mut ::core::ffi::c_char,
        ptr: *mut *mut ::core::ffi::c_void,
    );
}
extern "C" {
    pub fn gks_cairo_plugin(
        fctid: ::core::ffi::c_int,
        dx: ::core::ffi::c_int,
        dy: ::core::ffi::c_int,
        dimx: ::core::ffi::c_int,
        i_arr: *mut ::core::ffi::c_int,
        len_f_arr_1: ::core::ffi::c_int,
        f_arr_1: *mut f64,
        len_f_arr_2: ::core::ffi::c_int,
        f_arr_2: *mut f64,
        len_c_arr: ::core::ffi::c_int,
        c_arr: *mut ::core::ffi::c_char,
        ptr: *mut *mut ::core::ffi::c_void,
    );
}
extern "C" {
    pub fn gks_zmq_plugin(
        fctid: ::core::ffi::c_int,
        dx: ::core::ffi::c_int,
        dy: ::core::ffi::c_int,
        dimx: ::core::ffi::c_int,
        i_arr: *mut ::core::ffi::c_int,
        len_f_arr_1: ::core::ffi::c_int,
        f_arr_1: *mut f64,
        len_f_arr_2: ::core::ffi::c_int,
        f_arr_2: *mut f64,
        len_c_arr: ::core::ffi::c_int,
        c_arr: *mut ::core::ffi::c_char,
        ptr: *mut *mut ::core::ffi::c_void,
    );
}
extern "C" {
    pub fn gks_pgf_plugin(
        fctid: ::core::ffi::c_int,
        dx: ::core::ffi::c_int,
        dy: ::core::ffi::c_int,
        dimx: ::core::ffi::c_int,
        i_arr: *mut ::core::ffi::c_int,
        len_f_arr_1: ::core::ffi::c_int,
        f_arr_1: *mut f64,
        len_f_arr_2: ::core::ffi::c_int,
        f_arr_2: *mut f64,
        len_c_arr: ::core::ffi::c_int,
        c_arr: *mut ::core::ffi::c_char,
        ptr: *mut *mut ::core::ffi::c_void,
    );
}
extern "C" {
    pub fn gks_video_plugin(
        fctid: ::core::ffi::c_int,
        dx: ::core::ffi::c_int,
        dy: ::core::ffi::c_int,
        dimx: ::core::ffi::c_int,
        i_arr: *mut ::core::ffi::c_int,
        len_f_arr_1: ::core::ffi::c_int,
        f_arr_1: *mut f64,
        len_f_arr_2: ::core::ffi::c_int,
        f_arr_2: *mut f64,
        len_c_arr: ::core::ffi::c_int,
        c_arr: *mut ::core::ffi::c_char,
        ptr: *mut *mut ::core::ffi::c_void,
    );
}
extern "C" {
    pub fn gks_agg_plugin(
        fctid: ::core::ffi::c_int,
        dx: ::core::ffi::c_int,
        dy: ::core::ffi::c_int,
        dimx: ::core::ffi::c_int,
        i_arr: *mut ::core::ffi::c_int,
        len_f_arr_1: ::core::ffi::c_int,
        f_arr_1: *mut f64,
        len_f_arr_2: ::core::ffi::c_int,
        f_arr_2: *mut f64,
        len_c_arr: ::core::ffi::c_int,
        c_arr: *mut ::core::ffi::c_char,
        ptr: *mut *mut ::core::ffi::c_void,
    );
}
extern "C" {
    pub fn gks_ft_get_metrics(
        font: ::core::ffi::c_int,
        fontsize: f64,
        codepoint: ::core::ffi::c_uint,
        dpi: ::core::ffi::c_uint,
        width: *mut f64,
        height: *mut f64,
        depth: *mut f64,
        advance: *mut f64,
        bearing: *mut f64,
        xmin: *mut f64,
        xmax: *mut f64,
        ymin: *mut f64,
        ymax: *mut f64,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gks_ft_get_kerning(
        font: ::core::ffi::c_int,
        fontsize: f64,
        dpi: ::core::ffi::c_uint,
        first_codepoint: ::core::ffi::c_uint,
        second_codepoint: ::core::ffi::c_uint,
    ) -> f64;
}
extern "C" {
    pub fn gks_ft_text3d(
        x: f64,
        y: f64,
        z: f64,
        text: *mut ::core::ffi::c_char,
        axis: ::core::ffi::c_int,
        gkss: *mut gks_state_list_t,
        heightFactor: f64,
        scaleFactors: *mut f64,
        gdp: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: ::core::ffi::c_int,
                arg2: *mut f64,
                arg3: *mut f64,
                arg4: ::core::ffi::c_int,
                arg5: ::core::ffi::c_int,
                arg6: *mut ::core::ffi::c_int,
            ),
        >,
        wc3towc: ::core::option::Option<
            unsafe extern "C" fn(arg1: *mut f64, arg2: *mut f64, arg3: *mut f64),
        >,
    );
}
extern "C" {
    pub fn gks_ft_inq_text3d_extent(
        x: f64,
        y: f64,
        z: f64,
        text: *mut ::core::ffi::c_char,
        axis: ::core::ffi::c_int,
        gkss: *mut gks_state_list_t,
        heightFactor: f64,
        scaleFactors: *mut f64,
        gdp: ::core::option::Option<
            unsafe extern "C" fn(
                arg1: ::core::ffi::c_int,
                arg2: *mut f64,
                arg3: *mut f64,
                arg4: ::core::ffi::c_int,
                arg5: ::core::ffi::c_int,
                arg6: *mut ::core::ffi::c_int,
            ),
        >,
        wc3towc: ::core::option::Option<
            unsafe extern "C" fn(arg1: *mut f64, arg2: *mut f64, arg3: *mut f64),
        >,
        bx: *mut f64,
        by: *mut f64,
    );
}
extern "C" {
    pub fn gks_ft_set_bearing_x_direction(arg1: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_ft_inq_bearing_x_direction(arg1: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_ft_load_user_font(
        font: *mut ::core::ffi::c_char,
        ignore_file_not_found: ::core::ffi::c_int,
    ) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn gks_set_encoding(encoding: ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_inq_encoding(encoding: *mut ::core::ffi::c_int);
}
extern "C" {
    pub fn gks_set_callback(
        callback: ::core::option::Option<
            unsafe extern "C" fn(arg1: *const ::core::ffi::c_char) -> *mut ::core::ffi::c_char,
        >,
    );
}
#[allow(non_snake_case)]
pub fn FIX_COLORIND(c: u32) -> u32 { if c < MAX_COLOR { c } else { MAX_COLOR - 1 } }
